--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id="app"><!--app-html--></div>
+    <!--app-init-state-->
     <script type="module" src="/src/entry-client.ts"></script>
   </body>
 </html>
